--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-quill-editor": "^2.2.1",
     "vue-router": "^2.3.1",
     "vue-simplemde": "^0.3.8",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
